--- a/style.css
+++ b/style.css
@@ -2,3 +2,16 @@ body {
     background-color: #110F13;
     color: aliceblue;
 }
+
+.flowchart{
+    background-color: #110F13;
+    color: aliceblue;
+}
+
+.clickableNode{
+    cursor: pointer;
+    transition: box-shadow 0.3s ease-in-out;
+}
+.clickableNode:hover{
+    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.75);
+}
