--- a/style.css
+++ b/style.css
@@ -15,3 +15,32 @@ body {
 .clickableNode:hover{
     box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.75);
 }
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: rgb(26, 23, 32);
+    padding: 10px;
+    border-radius: 10px;
+    width: 400px;
+    text-align: center;
+    position: relative;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
