--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 .flowchart, .active-flowchart{
     background-color: #110F13;
     color: aliceblue;
-    padding: 10px;
+    padding: 20px;
 }
 #credit{
     position: fixed;
@@ -52,6 +52,19 @@ body {
     margin-left: 8px;
     cursor: pointer;
 }
+#help-button {
+    background-color: rgb(9, 62, 87);
+    border: solid black 2px;
+    border-radius: 50%;
+    color: white;
+    height: 30px;
+    width: 30px;
+    font-weight: bold;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+}
 
 .clickableNode{
     cursor: pointer;
@@ -72,7 +85,6 @@ body {
     justify-content: center;
     align-items: center;
 }
-
 .popup-content {
     background-color: rgb(26, 23, 32);
     padding: 10px;
@@ -81,7 +93,6 @@ body {
     text-align: center;
     position: relative;
 }
-
 .close {
     position: absolute;
     top: 10px;
