--- a/style.css
+++ b/style.css
@@ -136,3 +136,45 @@ h2.minimized, .header-left.minimized{
     justify-content: center;
     cursor: pointer;
 }
+
+@media (max-width:850px){
+    h2{
+        visibility: hidden;
+        width: 0;
+        height: 20px;
+    }
+}
+
+@media (max-width:600px){
+    h2{
+        visibility: hidden;
+        width: 0;
+        height: 20px;
+    }
+    .header-left{
+        width: fit-content;
+    }
+    .header-left button{
+        margin: 0;
+    }
+    .header {
+        justify-content: center;
+        margin: 0;
+    }
+    #input-button{
+        width: 75px;
+    }
+    #save-png{
+        padding: 7px;
+    }
+    #credit{
+        visibility: hidden;
+        width: 0px;
+        height: 0px;
+    }
+    html, body {
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+    }
+}
