--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 .header {
     background-color: rgb(33, 25, 49);
     padding: 0px 25px;
-    margin: 10px;
+    margin: 10px auto;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -28,6 +28,7 @@ body {
     border: solid black 3px;
     border-radius: 20px;
     transition: all 0.3s ease;
+    width: 80%;
 }
 .header-left button{
     margin-left: 8px;
