--- a/style.css
+++ b/style.css
@@ -153,6 +153,9 @@ h2.minimized, .header-left.minimized{
         width: 0;
         height: 20px;
     }
+    .arrow{
+        display: none;
+    }
 }
 
 @media (max-width:600px){
@@ -216,4 +219,12 @@ h2.minimized, .header-left.minimized{
 
 .context-menu .menu-item:hover{
     background-color: var(--mpurple);
+}
+
+.arrow {
+    width: 80px; 
+    height: 80px; 
+    position: absolute;
+    left: 10px; 
+    top: 90px; 
 }
