--- a/style.css
+++ b/style.css
@@ -227,4 +227,17 @@ h2.minimized, .header-left.minimized{
     position: absolute;
     left: 10px; 
     top: 90px; 
+    animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(-5px);
+    }
 }
