--- a/style.css
+++ b/style.css
@@ -87,6 +87,15 @@ h2.minimized, .header-left.minimized{
     padding: 6px 24px;
     cursor: pointer;
 }
+#undo-button{
+    height: fit-content;
+    background-color: rgb(77, 32, 107);
+    border: solid black 2px;
+    border-radius: 6px;
+    color: white;
+    padding: 6px 20px;
+    cursor: pointer;
+}
 #help-button {
     background-color: rgb(77, 32, 107);
     border: solid black 2px;
